code/force-app/main/default/objects/Activity/fields/FinServ__Expectations__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Expectations__c</fullName>
    <description>Notes about client&apos;s expectations</description>
    <label>Expectations</label>
    <type>TextArea</type>
</CustomField>