code/force-app/main/default/objects/Activity/fields/FinServ__Regarding__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Regarding__c</fullName>
    <description>Nature of interaction with the client</description>
    <label>Regarding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Client Retention</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>